--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  camera: ^0.11.2
+  image: ^4.7.2
+  speech_to_text: ^7.3.0
+  google_mlkit_text_recognition: ^0.15.0
+  flutter_bloc: ^9.1.1
+  bloc: ^9.2.0
+  equatable: ^2.0.8
 
 dev_dependencies:
   flutter_test:
