--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,21 @@ dependencies:
   flutter_bloc: ^9.1.1
   bloc: ^9.2.0
   equatable: ^2.0.8
+  
+  # Firebase
+  firebase_core: ^3.8.0
+  firebase_auth: ^5.3.3
+  cloud_firestore: ^5.5.0
+  firebase_storage: ^12.3.6
+  
+  # Google AI
+  google_generative_ai: ^0.4.6
+  
+  # Utils
+  uuid: ^4.5.1
+  get_it: ^8.0.2
+  injectable: ^2.5.0
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
