--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   injectable: ^2.5.0
   permission_handler: ^11.3.1
   flutter_dotenv: ^6.0.0
+  firebase_remote_config: ^5.5.0
 
 dev_dependencies:
   flutter_test:
