--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   permission_handler: ^11.3.1
   flutter_dotenv: ^6.0.0
   firebase_remote_config: ^5.5.0
+  firebase_analytics: ^11.6.0
 
 dev_dependencies:
   flutter_test:
